kiosk_cms/static/css/CSSpracticeWebsite.css
/* ... */
#submit-step1 h3 {
  letter-spacing: 2px;
  font-size: 30px;
  color: #333333;
}
#submit-step1 p {
  color: #333333;
  text-align: center;
  max-width: 600px;
  margin: 0 auto;
}
#submit-step2 {                                    /*Submit Section enter your email*/
  background-color: white;
  height: 100%;
  padding-bottom: 50px;
  opacity: 1.0;
  cursor: default;
}
#submit-step2 h3 {
  letter-spacing: 2px;
  font-size: 30px;
  color: #333333;
}
#submit-step2 p {
  color: #333333;
  text-align: center;
  max-width: 600px;
  margin: 0 auto;
}
#submit-photo {                                        /*Submit Section choose your photo*/
  background-color: white;
  height: 100%;
  padding-top: 20px;
  opacity: 1.0;
  cursor: default;
  display: inline}
#submit-photo h3 {
  letter-spacing: 2px;
  font-size: 30px;
  background-color: white;
  color: #333333;
}
#submit-photo p {
  color: #333333;
  text-align: center;
  font-size: 15px;
  max-width: 600px;
  margin: 0 auto;
  background-color: white;
}
#submit-info {
  margin-top: -80px;
}
.uploadzone {
  width: 400px;
  height: 300px;
  margin: 0 auto;
  border: solid #333333 10px;
}
.upload-container {
  margin: 0 auto;
  position: relative;
  margin-bottom: 50px;
}
#myfile {
  opacity: 0;
  border: solid 30px #333333;
}
#select {                                             /*Choose me button*/
  font-family: "Raleway";
  font-size : 15px;
  color : #333333;
  letter-spacing: 3px;
  font-weight: 400;
  background-color : white;
  cursor: crosshair;
  text-transform: uppercase;
  text-align: center;
  margin: 0 auto;
  display: inline;
}
strong {
  padding-right: 3px;
}
#draganddrop {
  font-family: "Raleway";
  font-size: 15px;
  color: #333333;
  letter-spacing: 3px;
  text-transform: uppercase;
  font-weight: 400;
  background-color : white;
  display: inline;
}
.scroll-top-wrapper {                                   /*Scroll to the top button*/
  position: fixed;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  text-align: center;
  z-index: 10;
  background-color: #DE4831;
  color: white;
  width: 40px; 
  height: 40px;
  line-height: 40px;
  right: 20px; /*space between button and right side of the page*/
  bottom: 8px; /*space between button and bottom of the page*/
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}
.scroll-top-wrapper:hover {
  background-color: none;
}
.scroll-top-wrapper.show {
  visibility: visible;
  cursor: pointer;
  opacity: .80;
}
.scroll-top-wrapper i.fa {
  line-height: inherit;
}
#campaign-slogan {
  font-size: 20px;
  font-family:'Raleway';
  text-align: center;
  letter-spacing: 3px;
  width: 100%;
  color: black;
}
.ribbon {
  background-color: #DE4831;
  overflow-x: hidden;
  z-index: 4;
  /* top right corner */
  position: fixed;
  right: -50px;
  top: 30px;
  /* 45 deg cw rotation */
  -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
       -o-transform: rotate(45deg);
          transform: rotate(45deg);
  /* shadow */
  -webkit-box-shadow: 0 0 2px #DE4831;
     -moz-box-shadow: 0 0 2px #DE4831;
          box-shadow: 0 0 2px #DE4831;
}
.ribbon a {
  color: white;
  display: block;
  font-size: 14px;
  margin: 1px 0;
  padding: 10px 40px;
  text-align: center;
  text-decoration: none;
  overflow: hidden;
}
#emptyHeart {
  height: 25px;
  width: 25px;
  margin-top: -50px;
  padding-left: 10px;
  cursor: pointer;
}
#fullHeart{
  height: 25px;
  width: 25px;
  margin-top: -50px;
  padding-left: 10px;
  cursor: auto;
}
#photoScore {
  color: #DE4831;
  font-size: 18px;
  font-style: "Raleway";
  margin-top: -35px;
  margin-left: 42px;
}
#myImg {
  cursor: pointer;
}
.cropArea {
  padding: 15px;
  background-color: transparent;
}
.highlight {
  opacity: .5;
}
.submit-container {
  margin: 0 auto;
  width: 100%;
}

